ajustes iniciais e primeiro post

--- a/content/themes/slimpost/partials/navigation.hbs
+++ b/content/themes/slimpost/partials/navigation.hbs
@@ -1,7 +1,5 @@
 <nav class="menu" role="navigation">
-	<a href="#">Home</a>
+	<a href="http://blog.meiasdepilates.com.br/">Blog</a>
 	<span class="delimiter">&#8226;</span>
-	<a href="#">About</a>
-	<span class="delimiter">&#8226;</span>
-	<a href="#">Contacts</a>
+	<a href="http://www.meiasdepilates.com.br/">Loja</a>
 </nav>
