--- a/content/themes/slimpost/index.hbs
+++ b/content/themes/slimpost/index.hbs
@@ -10,10 +10,11 @@
 		<article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="{{post_class}}">
 			<header class="post-header">        		
     			<h2 itemprop="name" class="post-title">
-    				<a href="{{url}}" itemprop="url">{{{title}}}</a>
+    				<!--<a href="{{url}}" itemprop="url">{{{title}}}</a>-->
+    				{{{title}}}
     			</h2>
     			<div class="post-meta">
-        			<time datetime="{{date format='YYYY-MM-DD'}}" itemprop="datePublished">{{date published_at format="MMMM DD, YYYY"}}</time>
+        			<time datetime="{{date format='DD-MM-YY'}}" itemprop="datePublished">{{date published_at format="DD-MM-YY"}}</time>
         			{{#if tags}}
     				<span class="delimiter">&#8226;</span> 
 		        	{{#tags}}
@@ -24,7 +25,7 @@
         		<hr>
     		</header>
     		<section itemprop="description" class="post-excerpt">
-    			<p>{{excerpt}}&hellip;</p>
+    			<p>{{content}}</p>
     		</section>
 		</article>
 		{{/foreach}}
